# S3

./: .gitignore  README.md
APP4/: README.md
APP4/lab/: README.md  ex1  ex1.cpp  ex2  ex2.cpp  ex3  ex3.cpp
APP4/prob/: README.md
APP4/prob/codeQt/: exemplPID.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot_robotdiag.py  robotdiag.cpp  robotdiag.h  robotsim.cpp  robotsim.h  robottest.cpp  yourmainwindow.h
APP4/prob/lab/: Makefile
APP4/prob/vm_asm/: Makefile  README.md  compiler.cpp  machine.cpp  parser.cpp  parser.hpp  pid.asm  tokens.cpp  vm.hpp
APP4/prob/vm_asm/ref/asm_design/: CMakeLists.txt  ast.cpp  ast.hpp  compiler.hpp  compiler_test.cpp  parser.y  test.asm  vm.cpp
Projet/: README.md
Projet/IdentificationParams/identificationArduino/: platformio.ini
Projet/IdentificationParams/identification_Qt/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  yourmainwindow.h
Projet/Modelisation/: MGTemplateBasic.txt
Projet/identification/codeQt/: mainwindow.h  mainwindow.ui
Projet/librairiesArduino/DAC_2629/: DAC2629.cpp
Projet/librairiesArduino/Fonctions_GRO/: Fonctions_GRO.cpp
Projet/librairiesArduino/Grove_IMU_10DOF_v2/: I2Cdev.cpp
Projet/librairiesArduino/IR_remote_GRO/: IRremoteInt_GRO.h  IRremote_GRO.cpp
Projet/librairiesArduino/LCD_LK162/: LCD_LK162.cpp  LCD_LK162.h
Projet/modelisation/: TracerS3GRO.m
identification/codeQt/: csvwriter.cpp  csvwriter.h  identification.pro  mainwindow.cpp  mainwindow.h
librairiesArduino/IR_remote_GRO/: IRremote_GRO.h
templatePiArduino/codeQt/: Template1.pro  main.cpp  plot.cpp
(+35 files in other folders)
